force-app/main/default/objects/Opportunity/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Hardcoded ID of Account</description>
    <formula>Account.Account_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hardcoded ID of Account</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>