force-app/main/default/objects/Opportunity/fields/Account_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_Market__c</fullName>
    <description>Market , use for report</description>
    <formula>TEXT(Account.Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Market , use for report</inlineHelpText>
    <label>Account Market</label>
    <type>Text</type>
</CustomField>