force-app/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Owner full name</description>
    <formula>Account.Owner.FirstName  &amp;&apos; &apos;&amp; Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owner full name</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>