force-app/main/default/objects/Opportunity/fields/Amount_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Last_Modified_Date__c</fullName>
    <description>Stamp  Last Modified Date for AMOUNG, use for workflow</description>
    <inlineHelpText>Stamp  Last Modified Date for AMOUNG, use for workflow</inlineHelpText>
    <label>Amount - Last Modified Date</label>
    <type>DateTime</type>
</CustomField>