force-app/main/default/objects/Opportunity/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <formula>SBQQ__RenewedContract__r.Clio_Auto_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>