force-app/main/default/objects/Opportunity/fields/Bill_To_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Mismatch__c</fullName>
    <formula>AND(
ISPICKVAL(Account.Market__c , &quot;Sweden&quot;),
NOT(ISNULL(SBQQ__PrimaryQuote__r.Bill_To_Account__c)),
NOT(ISBLANK(SBQQ__PrimaryQuote__r.Bill_To_Account_Check__c)),
 LOWER(SBQQ__PrimaryQuote__r.SBQQ__BillingName__c) &lt;&gt; LOWER (SBQQ__PrimaryQuote__r.Bill_To_Account_Check__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>