force-app/main/default/objects/Opportunity/fields/Bill_To_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_on_Quote__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Bill_To_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill-To on Quote</label>
    <type>Text</type>
</CustomField>