force-app/main/default/objects/Opportunity/fields/Billing_Info_Missing_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billing_Info_Missing_on_Quote__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Billing_Info_Missing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Info Missing on Quote</label>
    <type>Checkbox</type>
</CustomField>