force-app/main/default/objects/Opportunity/fields/Check_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Check_Bill_To_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the address of the Bill-To Account address is not referring to another account.
If it does, change the Bill-To Account on the Quote.</inlineHelpText>
    <label>Check Bill-To Account</label>
    <type>Checkbox</type>
</CustomField>