force-app/main/default/objects/Opportunity/fields/Check_Invoice_Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Invoice_Product_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if there are Products with Start Date in Future Year.
Check if there is a value in the field Invoice Date.</inlineHelpText>
    <label>Check Invoice &amp; Product Start Date</label>
    <type>Checkbox</type>
</CustomField>