force-app/main/default/objects/Opportunity/fields/Check_QL_Renewed_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Check_QL_Renewed_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if all Quote Lines, where type is Renewal, has a value in Renewed Subscription (or Upgraded Subscription in Amendments).</inlineHelpText>
    <label>Check_QL Renewed Subscription</label>
    <type>Checkbox</type>
</CustomField>