force-app/main/default/objects/Opportunity/fields/Check_Renewal_Upsale__c.field-meta.xml
<CustomField>
    <fullName>Check_Renewal_Upsale__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check which Quote Line should have a value in &quot;Renewed Subscription&quot; by looking on Subscriptions in Account. You can use the Quote Line quick view for Quotes with many lines.</inlineHelpText>
    <label>Check Renewal + Upsale</label>
    <type>Checkbox</type>
</CustomField>