force-app/main/default/objects/Opportunity/fields/Check_Zero_Activated__c.field-meta.xml
<CustomField>
    <fullName>Check_Zero_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when Subscriptions have been activated in Zero.</inlineHelpText>
    <label>Check Zero Activated</label>
    <type>Checkbox</type>
</CustomField>