force-app/main/default/objects/Opportunity/fields/Clio_Yearly_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Clio_Yearly_Opportunity_Value__c</fullName>
    <description>Formula field created to show the total opportunity value taking the contract term into consideration</description>
    <formula>SBQQ__PrimaryQuote__r.Total_ACV_incl_Partner_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Opportunity Value taking the Contract Term into consideration.</inlineHelpText>
    <label>Yearly Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>