force-app/main/default/objects/Opportunity/fields/Close_Date_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Invoice_Date__c</fullName>
    <formula>If(
AND(
CloseDate &gt;  SBQQ__PrimaryQuote__r.Clio_First_invoice_date__c ,
NOT(ISBLANK( SBQQ__PrimaryQuote__c ))
)
,True, False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True: The Opportunity Close Date is Greater than the First Invoice Date on Primary Quote
False: The Opportunity Close Date is Less Than or Equal the First Invoice Date on Primary Quote</inlineHelpText>
    <label>Close Date &lt; Invoice Date</label>
    <type>Checkbox</type>
</CustomField>