force-app/main/default/objects/Opportunity/fields/Close_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Stamp__c</fullName>
    <description>Set date with workflow when a opportunity is set as Closed Won</description>
    <inlineHelpText>Set date with workflow when a opportunity is set as Closed Won</inlineHelpText>
    <label>Close Date Stamp</label>
    <type>Date</type>
</CustomField>