force-app/main/default/objects/Opportunity/fields/Closed_Lost_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date_Stamp__c</fullName>
    <description>Set date with workflow when a opportunity is set as Closed Lost, use for reports and track which quarter this opportunity belongs if opportunity reopens and set to &quot;closed won&quot;</description>
    <inlineHelpText>Date Stamp when opportunity is set to closed lost,</inlineHelpText>
    <label>Closed Lost - Date Stamp</label>
    <type>Date</type>
</CustomField>