force-app/main/default/objects/Opportunity/fields/Compare_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Compare_Account_Owner__c</fullName>
    <description>Use for report &amp; Demandtool to match if Account and Opportunity have identical owner. Mainly to reassing renewal opportunity to correct owner instead of deal desk</description>
    <formula>IF(  Account.OwnerId   =  OwnerId ,&quot;Owner Match&quot;,&quot;Owner Mismatch&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report &amp; Demandtool to match if Account and Opportunity have identical owner. Mainly to reassing renewal opportunity to correct owner instead of deal desk</inlineHelpText>
    <label>Compare Account Owner</label>
    <type>Text</type>
</CustomField>