force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alinea</fullName>
            </value>
            <value>
                <fullName>Gleerups</fullName>
            </value>
            <value>
                <fullName>Goforlag</fullName>
            </value>
            <value>
                <fullName>Gyldendal</fullName>
            </value>
            <value>
                <fullName>Liber</fullName>
            </value>
            <value>
                <fullName>MatematikFessor</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>Natur &amp; Kultur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>