force-app/main/default/objects/Opportunity/fields/Contract_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Contract_Auto_Renew__c</fullName>
    <formula>SBQQ__RenewedContract__r.Clio_Auto_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does Contract being renewed have Auto Renew?</inlineHelpText>
    <label>Renewed Contract has Auto Renew?</label>
    <type>Checkbox</type>
</CustomField>