force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Use for reports</description>
    <formula>Contract.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for reports</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>