force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Use for reports</description>
    <formula>Contract.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for reports</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>