force-app/main/default/objects/Opportunity/fields/Count_New_Sale_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_New_Sale_Products__c</fullName>
    <label>Count New Sale Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>