force-app/main/default/objects/Opportunity/fields/Count_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunity__c</fullName>
    <description>Use for reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for reports</inlineHelpText>
    <label>Count Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>