force-app/main/default/objects/Opportunity/fields/Count_Upsale_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Upsale_Products__c</fullName>
    <label>Count Upsale Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>