force-app/main/default/objects/Opportunity/fields/Deal_Desk_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to control that only one Deal Desk Case is created by Opportunity</description>
    <label>Deal Desk Case Created</label>
    <type>Checkbox</type>
</CustomField>