force-app/main/default/objects/Opportunity/fields/Deal_Desk_Checked__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Checked__c</fullName>
    <label>Deal Desk Checked</label>
    <type>Date</type>
</CustomField>