force-app/main/default/objects/Opportunity/fields/Deal_Desk_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Date__c</fullName>
    <description>Dates stamp when stage is set to &quot;Deal Desk&quot; via work flow</description>
    <label>Deal Desk - Date</label>
    <type>DateTime</type>
</CustomField>