force-app/main/default/objects/Opportunity/fields/Discount_Amt_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amt_on_Quote__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__AdditionalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amt. on Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>