force-app/main/default/objects/Opportunity/fields/Discount_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Quote__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.addl_disc_amount_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount on Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>