force-app/main/default/objects/Opportunity/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <label>Email Sent</label>
    <type>DateTime</type>
</CustomField>