force-app/main/default/objects/Opportunity/fields/First_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Date__c</fullName>
    <description>First Invoice Date entered on the Primary Quote</description>
    <formula>SBQQ__PrimaryQuote__r.Clio_First_invoice_date__c</formula>
    <inlineHelpText>First Invoice Date entered on the Primary Quote</inlineHelpText>
    <label>First Invoice Date</label>
    <type>Date</type>
</CustomField>