force-app/main/default/objects/Opportunity/fields/Forecasted_Amount_Probability__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Amount_Probability__c</fullName>
    <formula>Marketing_Amount__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For report</inlineHelpText>
    <label>Forecasted Amount Probability (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>