force-app/main/default/objects/Opportunity/fields/Has_Bundled_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Has_Bundled_Product_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Workflow populated. Populated if Primary Quotes has a bundled product included.</inlineHelpText>
    <label>Has Bundled Product(s)</label>
    <type>Checkbox</type>
</CustomField>