force-app/main/default/objects/Opportunity/fields/Imp_SE_Stage__c.field-meta.xml
<CustomField>
    <fullName>Imp_SE_Stage__c</fullName>
    <description>Use for imp se</description>
    <label>Imp SE Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imp 1</fullName>
            </value>
            <value>
                <fullName>Imp 2</fullName>
            </value>
            <value>
                <fullName>Imp 3</fullName>
            </value>
            <value>
                <fullName>Imp 4</fullName>
            </value>
            <value>
                <fullName>Imp 5</fullName>
            </value>
            <value>
                <fullName>Imp 6</fullName>
            </value>
            <value>
                <fullName>Imp 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>