force-app/main/default/objects/Opportunity/fields/Invoice_Processed__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Processed__c</fullName>
    <inlineHelpText>Updated by Finance when invoice was sent</inlineHelpText>
    <label>Invoice Processed</label>
    <type>Date</type>
</CustomField>