force-app/main/default/objects/Opportunity/fields/Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lost_Comments__c</fullName>
    <inlineHelpText>Comments due to Closed Lost</inlineHelpText>
    <label>Lost Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>