force-app/main/default/objects/Opportunity/fields/Lost_Contract_term__c.field-meta.xml
<CustomField>
    <fullName>Lost_Contract_term__c</fullName>
    <description>How long contract have they signed for our competitor?</description>
    <inlineHelpText>How long contract have they signed for our competitor?</inlineHelpText>
    <label>Lost Contract term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>