force-app/main/default/objects/Opportunity/fields/Lost_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Lost_Contract_Value__c</fullName>
    <description>Lost Total contract value to our competitor</description>
    <inlineHelpText>Lost Total contract value to our competitor</inlineHelpText>
    <label>Lost Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>