force-app/main/default/objects/Opportunity/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <description>Opportunity owners manager email, use to send reports</description>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity owners manager email</inlineHelpText>
    <label>Managers Email</label>
    <type>Text</type>
</CustomField>