force-app/main/default/objects/Opportunity/fields/Marketing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Amount__c</fullName>
    <description>Amount displayed in Forecast view</description>
    <inlineHelpText>Core: Represents the Annual Contract Value (max 12 month value).
Academy for School: Amount entered by salesperson.
Partnerships: Amount entered by salesperson.</inlineHelpText>
    <label>Forecasted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>