force-app/main/default/objects/Opportunity/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <formula>Account.Municipality_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality</label>
    <type>Text</type>
</CustomField>