force-app/main/default/objects/Opportunity/fields/Municipality_Order_Opp__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Order_Opp__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.Quote_Municipality_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Municipality Order (Opp)</label>
    <type>Checkbox</type>
</CustomField>