force-app/main/default/objects/Opportunity/fields/New_and_Upsale_Count__c.field-meta.xml
<CustomField>
    <fullName>New_and_Upsale_Count__c</fullName>
    <label>New and Upsale Count</label>
    <summarizedField>OpportunityLineItem.Count_Opportunity_Product__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Sales_Type_Code__c</field>
        <operation>equals</operation>
        <value>SALE-NEW, SALE-UPSELL</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>