force-app/main/default/objects/Opportunity/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <formula>IF(OR(Owner.Manager.LastName = &quot;Stensgaard&quot;,  
Owner.Manager.LastName = &quot;Larsen&quot;), Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName, 
Owner.Manager.FirstName &amp; &quot; &quot; &amp; Owner.Manager.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>