force-app/main/default/objects/Opportunity/fields/Owners_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owners_Manager_Email__c</fullName>
    <description>Opportunity Ownerss Manager&apos;s Email, use for report</description>
    <inlineHelpText>Opportunity Ownerss Manager&apos;s Email, use for report</inlineHelpText>
    <label>Owners Manager Email</label>
    <type>Email</type>
</CustomField>