force-app/main/default/objects/Opportunity/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Use for partner only, order from Thomas T 17/2-2021</description>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content Partnerships</fullName>
            </value>
            <value>
                <fullName>Funding Partnerships</fullName>
            </value>
            <value>
                <fullName>License Partnerships</fullName>
            </value>
            <value>
                <fullName>International Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>