force-app/main/default/objects/Opportunity/fields/Previous_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Close_Date__c</fullName>
    <label>Previous Close Date</label>
    <type>Date</type>
</CustomField>