force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__PrimaryContact__r.FirstName &amp; &quot; &quot; &amp; SBQQ__PrimaryQuote__r.SBQQ__PrimaryContact__r.LastName</formula>
    <inlineHelpText>From Primary Quote</inlineHelpText>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>