force-app/main/default/objects/Opportunity/fields/Primary_Contact_Email_for_sending__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email_for_sending__c</fullName>
    <description>USe WF to send email to primary contact</description>
    <label>Primary Contact Email (for sending )</label>
    <type>Email</type>
</CustomField>