force-app/main/default/objects/Opportunity/fields/Primary_Contact_Email_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email_Partner__c</fullName>
    <formula>Primary_Contact_Partner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Email - Partner</label>
    <type>Text</type>
</CustomField>