force-app/main/default/objects/Opportunity/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <description>Use for email &quot;Generic Template for Upsales &amp; Resales V2&quot; Implementation DK 2021</description>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__PrimaryContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact - First Name</label>
    <type>Text</type>
</CustomField>