force-app/main/default/objects/Opportunity/fields/Quote_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Start_Date__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>use for report</inlineHelpText>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>