force-app/main/default/objects/Opportunity/fields/Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Count__c</fullName>
    <label>Renewal Count</label>
    <summarizedField>OpportunityLineItem.Count_Opportunity_Product__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Sales_Type_Code__c</field>
        <operation>equals</operation>
        <value>SALE-RESALE</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>