force-app/main/default/objects/Opportunity/fields/Renewal_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quoted__c</fullName>
    <formula>SBQQ__RenewedContract__r.SBQQ__RenewalQuoted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Quoted</label>
    <type>Checkbox</type>
</CustomField>