force-app/main/default/objects/Opportunity/fields/Renewed_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract_Id__c</fullName>
    <formula>SBQQ__RenewedContract__r.Contract_ID_18_character__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewed Contract Id</label>
    <type>Text</type>
</CustomField>