force-app/main/default/objects/Opportunity/fields/Renewed_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract_Type__c</fullName>
    <description>QA - Checks the contract type which is being renewed.</description>
    <formula>Text(SBQQ__RenewedContract__r.Contract_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>QA - Checks the contract type which is being renewed</inlineHelpText>
    <label>Renewed Contract Type</label>
    <type>Text</type>
</CustomField>