force-app/main/default/objects/Opportunity/fields/Renewed_Subs_Missing__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Subs_Missing__c</fullName>
    <inlineHelpText>Count of Quote Lines marked as &quot;Renewal&quot; where there is no value in &quot;Renewed Subscription&quot;</inlineHelpText>
    <label>Renewed Subs Missing</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Sales_Type_Code__c</field>
        <operation>equals</operation>
        <value>SALE-RESALE</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Renewed_Subscription_WF__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>