force-app/main/default/objects/Opportunity/fields/Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Band__c</fullName>
    <formula>IF( Marketing_Amount__c &lt;= 0, &quot;01. Less than 0&quot; ,
IF( Marketing_Amount__c &lt; 10000, &quot;02. 1-10K&quot; ,
IF( Marketing_Amount__c &lt; 20000, &quot;03. 10-20K&quot; ,
IF( Marketing_Amount__c &lt; 50000, &quot;04. 20-50K&quot; ,
IF( Marketing_Amount__c &lt; 100000, &quot;05. 50-100K&quot; ,
IF( Marketing_Amount__c &lt; 500000, &quot;06. 100-500K&quot; , &quot;07. &gt; 500K&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Band</label>
    <type>Text</type>
</CustomField>