force-app/main/default/objects/Opportunity/fields/Slack_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alert_Date__c</fullName>
    <label>Slack Alert Date</label>
    <type>Date</type>
</CustomField>