force-app/main/default/objects/Opportunity/fields/Trial_Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Trial_Subscription_Number__c</fullName>
    <inlineHelpText>This opportunity has been converted from a lead that had Trial Subscription Number.</inlineHelpText>
    <label>Trial Subscription Number</label>
    <type>TextArea</type>
</CustomField>