force-app/main/default/objects/Opportunity/fields/Was_created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Was_created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for reporting to differentiate Opportunity created from Trial Lead, or manually created by Sales / coming from different sources. Field might not be needed, delete if needed.</description>
    <label>Was created from Lead</label>
    <type>Checkbox</type>
</CustomField>