force-app/main/default/objects/Opportunity/fields/Xactly_Imported__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Imported__c</fullName>
    <inlineHelpText>Date when opportunity was imported to Xactly</inlineHelpText>
    <label>Xactly Imported</label>
    <type>Date</type>
</CustomField>