force-app/main/default/objects/Opportunity/fields/Xactly_Inside_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Inside_Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to calculate Split opportunities in Xactly.</description>
    <inlineHelpText>For split opportunities. Add the name of the Inside Sales Account Manager who should get commission</inlineHelpText>
    <label>Inside Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>