force-app/main/default/objects/Opportunity/fields/Xactly_Split_Percent_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Split_Percent_Account_Manager__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>Used for Xactly calculations in circumstances when a deal is split.</description>
    <inlineHelpText>% of deal allocated to Account Manager when opportunity is split. Default value is 100%</inlineHelpText>
    <label>Split Percent % - Account Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>