force-app/main/default/objects/Opportunity/fields/Xactly_Split_Percent_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Split_Percent_Inside_Sales__c</fullName>
    <formula>IF ( 
AND (
Xactly_Split_Percent_Account_Manager__c &lt; 1.00,
Xactly_Split_Percent_Account_Manager__c != 0.00
), 
1-Xactly_Split_Percent_Account_Manager__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Percent % - Inside Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>